<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_short">
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center"
        android:text="@string/forgot_password_text"
        android:textSize="17sp"
        android:textColor="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/et_forgotten_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_short"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bluebuttonbackground"
        android:text="@string/resetPassword"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:padding="@dimen/padding_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.108"
        app:layout_constraintWidth_percent="0.5" />
</LinearLayout>