<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".seatbooking.SeatBookingActivity">

    <TextView
        android:id="@+id/newbooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/newbooking"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/select_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/select_place"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newbooking"
        app:layout_constraintVertical_bias="0.01999998" />


    <androidx.cardview.widget.CardView
        android:id="@+id/bookSeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_place"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:id="@+id/selectplace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_shorter"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/getonbus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/getonbus" />

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/getonbus"
                    android:autoSizeTextType="uniform"
                    android:gravity="center_horizontal"
                    android:text="@string/from"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/getonbus"
                    android:layout_marginLeft="10dp"
                    android:autoSizeTextType="uniform"
                    android:padding="2dp"
                    android:text="Tulsipur"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/line"
                    android:layout_width="250dp"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />

                <ImageView
                    android:id="@+id/placeswap"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignRight="@+id/line"
                    android:layout_margin="0dp"
                    android:adjustViewBounds="true"
                    android:alpha="0.5"
                    android:background="@drawable/circlebackgroundred"
                    android:rotation="90"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_swap" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/getoffbus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/getoffbus" />

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/getoffbus"
                    android:autoSizeTextType="uniform"
                    android:text="@string/to"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/getoffbustotal"
                    android:layout_marginLeft="50dp"
                    android:autoSizeTextType="uniform"
                    android:padding="2dp"
                    android:text="Kathmandu"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/date_of_journey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/date_of_journey"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookSeat"
        app:layout_constraintVertical_bias="0.01999998" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_journey"
        app:layout_constraintVertical_bias="0.01999998">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_shorter"
            android:orientation="vertical">

            <EditText
                android:id="@+id/choose_journey_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_shorter"
                android:drawableRight="@drawable/calendar"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/choose_date"
                android:inputType="textPersonName" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/choose_seat_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/choose_seat_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/choose_seat"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:background="@drawable/bluebuttonbackground"
        android:drawableLeft="@drawable/ic_seat"
        android:paddingLeft="10dp"
        android:text="@string/choose_seat_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_seat_text"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/submit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeMinTextSize="15sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:text="@string/submit"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_seat"
        app:layout_constraintVertical_bias="0.01999998" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:background="@drawable/bluebuttonbackground"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_text"
        app:layout_constraintVertical_bias="0.00999999" />


</androidx.constraintlayout.widget.ConstraintLayout>